ontol-compiler/test-cases/error/map/obj_non_domain_type_and_unit_type.on
def foo ()
map (
    number (), // ERROR expected domain type
    foo ( // ERROR no properties expected
        'prop': x
    )
)
